<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.techgp.nimbus</groupId>
	<artifactId>nimbus</artifactId>
	<packaging>jar</packaging>
	<version>1.2</version>
	<name>Nimbus</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>jaudiotagger-repository</id>
			<url>https://dl.bintray.com/ijabz/maven</url>
		</repository>
	</repositories>

	<dependencies>
		<!--
			http://sparkjava.com/download
			https://mvnrepository.com/artifact/com.sparkjava/spark-core
		-->
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-core</artifactId>
			<version>[2.9.1,)</version>
		</dependency>
		<!--
			https://github.com/perwendel/spark-template-engines/tree/master/spark-template-freemarker
			https://mvnrepository.com/artifact/com.sparkjava/spark-template-freemarker
		-->
		<dependency>
			<groupId>com.sparkjava</groupId>
			<artifactId>spark-template-freemarker</artifactId>
			<version>[2.7.1,)</version>
		</dependency>
		<!--
			2.3.29 car "spark-template-freemarker" remonte une version "2.3.26-incubating"
			https://freemarker.apache.org/
			https://mvnrepository.com/artifact/org.freemarker/freemarker
		-->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>[2.3.29,)</version>
		</dependency>
		<!--
			https://github.com/google/gson
			https://www.mvnrepository.com/artifact/com.google.code.gson/gson
		-->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>[2.8.5,)</version>
		</dependency>
		<!--
			1.8 en béta
			http://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
			https://www.mvnrepository.com/artifact/org.slf4j/slf4j-api
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>[1.7.28,1.8.0-alpha0)</version>
		</dependency>
		<!--
			1.8 en béta
			http://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
			https://www.mvnrepository.com/artifact/org.slf4j/slf4j-simple
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>[1.7.28,1.8.0-alpha0)</version>
		</dependency>
		<!--
			https://mongodb.github.io/mongo-java-driver/
			https://www.mvnrepository.com/artifact/org.mongodb/mongodb-driver
		-->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver</artifactId>
			<version>[3.11.0,)</version>
		</dependency>
		<!--
			https://pdfbox.apache.org/
			https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
		-->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>[2.0.16,)</version>
		</dependency>
		<!--
			https://www.bouncycastle.org/latest_releases.html
			https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
		-->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>[1.63,)</version>
		</dependency>
		<!--
			https://github.com/mpatric/mp3agic
			https://mvnrepository.com/artifact/com.mpatric/mp3agic
		-->
		<dependency>
			<groupId>com.mpatric</groupId>
			<artifactId>mp3agic</artifactId>
			<version>[0.9.1,)</version>
		</dependency>
		<!--
			2.2.5 dans repository ci-dessus
			http://www.jthink.net/jaudiotagger/index.jsp
			https://bitbucket.org/ijabz/jaudiotagger/src/master/README.md?fileviewer=file-view-default
		-->
		<dependency>
			<groupId>net.jthink</groupId>
			<artifactId>jaudiotagger</artifactId>
			<version>[2.2.5,)</version>
		</dependency>
		<!--
			https://github.com/drewnoakes/metadata-extractor/releases
			https://www.mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
		-->
		<dependency>
			<groupId>com.drewnoakes</groupId>
			<artifactId>metadata-extractor</artifactId>
			<version>[2.12.0,)</version>
		</dependency>
		<!--
			https://commons.apache.org/proper/commons-io/
			https://www.mvnrepository.com/artifact/commons-io/commons-io
		-->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>[2.6,)</version>
		</dependency>
		<!--
		<dependency>
			<groupId>org.jclarion</groupId>
			<artifactId>image4j</artifactId>
			<version>0.7</version>0.7.1 dispo mais pas par Maven
		</dependency>
		-->

		<dependency>
			<groupId>fr.techgp.deps</groupId>
			<artifactId>image4j</artifactId>
			<version>0.7.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/image4j/image4j-0.7.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>fr.techgp.deps</groupId>
			<artifactId>jave</artifactId>
			<version>1.0.2</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/jave/jave-1.0.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>fr.techgp.deps</groupId>
			<artifactId>javazoom</artifactId>
			<version>2010</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/javazoom/mp3spi1.9.5.jar</systemPath>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src/</sourceDirectory>
		<outputDirectory>bin/</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>get-jars</id>
						<phase>compile</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>lib</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>generate-dep-tree</id>
						<phase>compile</phase>
						<goals>
							<goal>tree</goal>
						</goals>
						<configuration>
							<outputFile>./pom.tree.txt</outputFile>
							<outputType>txt</outputType>
							<verbose>true</verbose>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
